--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "HCGT"
+name = "HCGTherm"
 uuid = "28071b0f-1505-495f-9565-3513cfd1c620"
 authors = ["Evgeny Cherkashin, Derrick Hasterok, David Chapman"]
 version = "1.0.0"
