--- a/Project.toml
+++ b/Project.toml
@@ -1,16 +1,13 @@
-name = "HCGTherm"
+name = "HCGeoTherm"
 uuid = "28071b0f-1505-495f-9565-3513cfd1c620"
 authors = ["Evgeny Cherkashin, Derrick Hasterok, David Chapman"]
-version = "1.0.1"
+version = "1.0.2"
 
 [deps]
-CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
-LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
 julia = "1"
