--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "HCGeoTherm"
 uuid = "28071b0f-1505-495f-9565-3513cfd1c620"
 authors = ["Evgeny Cherkashin, Derrick Hasterok, David Chapman"]
-version = "1.0.2"
+version = "1.0.3"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -10,7 +10,11 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 
 [compat]
-julia = "1"
+DataFrames = ">= 1.6.1"
+Formatting = ">= 0.4.2"
+Interpolations = ">= 0.15.0"
+Optim = ">= 1.7.8"
+julia = ">= 1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
