--- a/Project.toml
+++ b/Project.toml
@@ -10,11 +10,11 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 
 [compat]
-DataFrames = ">= 1.6.1"
-Formatting = ">= 0.4.2"
-Interpolations = ">= 0.15.0"
-Optim = ">= 1.7.8"
-julia = ">= 1.9"
+DataFrames = "^ 1.6.1"
+Formatting = "^ 0.4.2"
+Interpolations = "^ 0.15.0"
+Optim = "^ 1.7.8"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
