--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,13 @@
 name = "HCGeoTherm"
 uuid = "28071b0f-1505-495f-9565-3513cfd1c620"
 authors = ["Evgeny Cherkashin, Derrick Hasterok, David Chapman"]
-version = "1.0.4"
+version = "1.0.5"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 
 [compat]
