--- a/Project.toml
+++ b/Project.toml
@@ -1,20 +1,20 @@
 name = "HCGeoTherm"
 uuid = "28071b0f-1505-495f-9565-3513cfd1c620"
 authors = ["Evgeny Cherkashin, Derrick Hasterok, David Chapman"]
-version = "1.0.6"
+version = "1.0.7"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
+Format = "1fa38f19-a742-5d3f-a2b9-30dd87b9d5f8"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 
 [compat]
 DataFrames = "^1.6.1"
-Formatting = "^0.4.2"
 Interpolations = "^0.15.0"
 Optim = "^1.7.8"
+Format = "^1.0.0"
 julia = "1"
 
 [extras]
